--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,14 +4,15 @@
   // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
+
     {
       "type": "node",
       "request": "launch",
-      "name": "Launch Program",
+      "name": "Launch JS Program",
       "skipFiles": [
         "<node_internals>/**"
       ],
-      "program": "${workspaceFolder}\\final_project\\router\\general.js"
+      "program": "${workspaceFolder}\\final_project\\index.js"
     }
   ]
 }
